<resources>
    <string name="app_name">ЕГЭ по информатике</string>
    <string name="about_ege_title">Перейти к описанию</string>
    <string name="exit">Выйти</string>
    <string name="result">Результат</string>
    <string name="add">+1</string>
    <string name="show_result">Показать результат</string>
    <string name="about_EGE">\n Об экзамене \n
                 С современным миром технологий и реалий программирования, разработки ЕГЭ по информатике имеет мало общего. Какие-то базовые моменты есть, но даже если разбираешься немного в задачах, то это еще не значит,
                 что в конечном итоге станешь хорошим разработчиком. Зато областей, где нужны IT-специалисты, великое множество. Вы нисколько не прогадаете, если хотите иметь стабильный заработок выше среднего. В IT вы это получите.
                 При условии, разумеется, наличия соответствующих способностей. А развиваться и расти здесь можно сколько угодно, ведь рынок настолько огромен, что даже представить себе не можете! Причем он не ограничивается только нашим государством.
                 Работайте на какую угодно компанию из любой точки мира! Это все очень вдохновляет, поэтому пусть подготовка к ЕГЭ по информатике будет первым незначительным шагом, после которого последуют годы саморазвития и совершенствования в данной области.\n
                 \n
                 Структура \n
                 Часть 1 содержит 23 задания с кратким ответом. В этой части собраны задания с кратким ответом, подразумевающие самостоятельное формулирование последовательности символов. Задания проверяют материал всех тематических блоков. 12 заданий относятся
                 к базовому уровню, 10 заданий к повышенному уровню сложности, 1 задание – к высокому уровню сложности. \n
                 Часть 2 содержит 4 задания, первое из которых повышенного уровня сложности, остальные 3 задания высокого уровня сложности. Задания этой части подразумевают запись развернутого ответа в произвольной форме. \n
                 На выполнение экзаменационной работы отводится 3 часа 55 минут (235 минут). На выполнение заданий части 1 рекомендуется отводить 1,5 часа (90 минут). Остальное время рекомендуется отводить на выполнение заданий части 2.
                 \n
                 Пояснения к оцениванию заданий \n
                 Выполнение каждого задания части 1 оценивается в 1 балл. Задание части 1 считается выполненным, если экзаменуемый дал ответ, соответствующий коду верного ответа. Выполнение заданий части 2 оценивается от 0 до 4 баллов.
                 Ответы на задания части 2 проверяются и оцениваются экспертами. Максимальное количество баллов, которое можно получить за выполнение заданий части 2, – 12.</string>
    <string name="ege_3">Сколько существует натуральных чисел x, для которых выполняется
                 неравенство "100110112 меньше х меньше 100111112?" \n
                 В ответе укажите только количество чисел, сами числа писать не нужно.</string>
    <string name="ege_4">Сколько слов длины 5, начинающихся с гласной буквы, можно составить из букв Е, Г, Э? Каждая буква может входить в слово несколько раз. Слова не обязательно должны быть осмысленными словами русского языка.</string>
    <string name="ege_5">По каналу связи передаются сообщения, содержащие только семь букв: А, Б, И, К, Л, О, С. Для передачи используется двоичный код, удовлетворяющий условию Фано. Кодовые слова для некоторых букв известны: А — 001, И — 01, С — 10. Какое наименьшее количество двоичных знаков потребуется для кодирования слова КОЛОБОК?</string>
    <string name="ege_6">Некоторое устройство имеет специальную кнопку включения/выключения, а выбор режима работы осуществляется установкой ручек двух тумблеров, каждая из которых может находиться в одном из пяти положений. Сколько различных режимов работы может иметь устройство? Выключенное состояние режимом работы не считать.</string>
    <string name="ege_7">При регистрации в компьютерной системе каждому пользователю выдаётся пароль, состоящий из 11 символов и содержащий только символы А, Б, В, Г, Д, Е. Каждый такой пароль в компьютерной программе записывается минимально возможным и одинаковым целым количеством байт, при этом используют посимвольное кодирование и все символы кодируются одинаковым и минимально возможным количеством бит. Определите, сколько байт необходимо для хранения 20 паролей.</string>
    <string name="ege_8">Решите уравнение: 121x + 110 = 1017 \n
                 Ответ запишите в троичной системе \n
                 (основание системы счисления в ответе писать не нужно).</string>
    <string name="ege_9">Сколько единиц содержится в двоичной записи значения выражения: \n
                 42020 + 22017 – 15?</string>
    <string name="ege_10">Значение арифметического выражения: 98 + 35 – 9 – записали в системе счисления с основанием 3. Сколько цифр «2» содержится в этой записи?</string>
    <string name="ege_11">Некоторый сегмент сети Интернет состоит из 1000 сайтов. Поисковый сервер в автоматическом режиме составил таблицу ключевых слов для сайтов этого сегмента. Вот ее фрагмент: \n
                 Ключевое слово	Найдено страниц \n
                 сканер - 200 \n
                 принтер - 250 \n
                 монитор - 450 \n
                 Сколько сайтов будет найдено по запросу «(принтер | сканер) и монитор», если по запросу «принтер | сканер» было найдено 450 сайтов, по запросу «принтер и монитор» — 40, а по запросу «сканер и монитор» — 50.
                 Считается, что все запросы выполнялись практически одновременно, так что набор страниц, содержащих все искомые слова, не изменялся за время выполнения запросов.</string>
    <string name="ege_12">В терминологии сетей TCP/IP маской сети называется двоичное число, определяющее, какая часть IP-адреса узла сети относится к адресу сети, а какая — к адресу самого узла в этой сети.
                 При этом в маске сначала (в старших разрядах) стоят единицы, а затем с некоторого места — нули. Обычно маска записывается по тем же правилам, что и IP-адрес, — в виде четырёх байтов, причём каждый байт записывается в виде десятичного числа.
                 Адрес сети получается в результате применения поразрядной конъюнкции к заданному IP-адресу узла и маске.
                 Например, если IP-адрес узла равен 231.32.255.131, а маска равна 255.255.240.0, то адрес сети равен 231.32.240.0.
                 Для узла с IP-адресом 98.162.71.94 адрес сети равен 98.162.71.64. Чему равно наибольшее количество возможных адресов в этой сети?</string>
    <string name="ege_13">Двое играют в «крестики-нолики» на поле 4 на 4 клетки. Какое количество информации (в битах) получил второй игрок, узнав ход первого игрока?</string>
    <string name="starting_text">Подготовка к ЕГЭ\n по информатике  </string>
    <string name="go_to_tasks">Перейти к заданиям</string>
    <string name="write_answer">Выберите ответ:</string>
    <string name="show_answer_three_1">2</string>
    <string name="show_answer_three_2">3</string>
    <string name="show_answer_three_3">5</string>
    <string name="show_answer_three_4">4</string>
    <string name="show_answer_four_1">148</string>
    <string name="show_answer_four_2">152</string>
    <string name="show_answer_four_3">158</string>
    <string name="show_answer_four_4">162</string>
    <string name="show_answer_five_1">20</string>
    <string name="show_answer_five_2">21</string>
    <string name="show_answer_five_3">22</string>
    <string name="show_answer_five_4">23</string>
    <string name="show_answer_six_1">25</string>
    <string name="show_answer_six_2">21</string>
    <string name="show_answer_six_3">29</string>
    <string name="show_answer_six_4">18</string>
    <string name="show_answer_seven_1">100</string>
    <string name="show_answer_seven_2">110</string>
    <string name="show_answer_seven_3">140</string>
    <string name="show_answer_seven_4">124</string>
    <string name="show_answer_eight_1">18</string>
    <string name="show_answer_eight_2">20</string>
    <string name="show_answer_eight_3">22</string>
    <string name="show_answer_eight_4">26</string>
    <string name="show_answer_nine_1">2015</string>
    <string name="show_answer_nine_2">2002</string>
    <string name="show_answer_nine_3">4030</string>
    <string name="show_answer_nine_4">4020</string>
    <string name="show_answer_ten_1">1</string>
    <string name="show_answer_ten_2">2</string>
    <string name="show_answer_ten_3">3</string>
    <string name="show_answer_ten_4">6</string>
    <string name="show_answer_eleven_1">450</string>
    <string name="show_answer_eleven_2">40</string>
    <string name="show_answer_eleven_3">50</string>
    <string name="show_answer_eleven_4">90</string>
    <string name="show_answer_twelve_1">128</string>
    <string name="show_answer_twelve_2">48</string>
    <string name="show_answer_twelve_3">64</string>
    <string name="show_answer_twelve_4">24</string>
    <string name="show_answer_thirteen_1">16</string>
    <string name="show_answer_thirteen_2">6</string>
    <string name="show_answer_thirteen_3">8</string>
    <string name="show_answer_thirteen_4">4</string>
    <string name="none"></string>

</resources>


