<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ege_transparent">

    <TextView
        android:id="@+id/Question10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:gravity="center"
        android:text="@string/ege_10"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/write_answer10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/write_answer"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnShowAnswerTen1"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_ten_1"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerTen2"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_ten_2"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerTen3"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_ten_3"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerTen4"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_ten_4"
        android:textColor="@color/colorBlack" />

</LinearLayout>