<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ege_transparent">

    <TextView
        android:id="@+id/Question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:gravity="center"
        android:text="@string/ege_4"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/write_answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/write_answer"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnShowAnswerFour1"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_four_1"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerFour2"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_four_2"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerFour3"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_four_3"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnShowAnswerFour4"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_answer_four_4"
        android:textColor="@color/colorBlack" />

</LinearLayout>