<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ege_transparent">

    <TextView
        android:id="@+id/Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:gravity="center"
        android:text="@string/none"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRusult"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/show_result"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/exit"
        android:textColor="@color/colorBlack" />

</LinearLayout>